--- a/src/main/resources/templates/front-end/header.html
+++ b/src/main/resources/templates/front-end/header.html
@@ -107,7 +107,7 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="#">
+                                            <a href="/socialpost/news">
                                                 <i class="feather-bookmark"></i>
                                                 <span>最新消息</span>
                                             </a>
@@ -175,7 +175,7 @@
                                     </div>
                                     <ul class="user-list-wrapper">
                                         <li>
-                                            <a href="/socialpost/student_socialpost">
+                                            <a href="/socialpost/">
                                                 <i class="feather-home"></i>
                                                 <span>會員中心</span>
                                             </a>
@@ -187,44 +187,60 @@
                                             </a>
                                         </li>
                                         <li>
-                                            <a href="/mj/student_enrolled_courses">
+                                            <a href="/course/my_courses">
                                                 <i class="feather-shopping-bag"></i>
                                                 <span>我的課程</span>
                                             </a>
                                         </li>
+<!--                                         <li> -->
+<!--                                             <a href="/mj/student_wishlist"> -->
+<!--                                                 <i class="feather-heart"></i> -->
+<!--                                                 <span>願望清單</span> -->
+<!--                                             </a> -->
+<!--                                         </li> -->
                                         <li>
-                                            <a href="/mj/student_wishlist">
-                                                <i class="feather-heart"></i>
-                                                <span>願望清單</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="/mj/student_reviews">
+                                            <a href="/course/my_courses">
                                                 <i class="feather-star"></i>
                                                 <span>我的評論</span>
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="/mj/student_my_quiz_attempts">
-                                                <i class="feather-list"></i>
-                                                <span>我的問答</span>
-                                            </a>
-                                        </li>
+<!--                                         <li> -->
+<!--                                             <a href="/mj/student_my_quiz_attempts"> -->
+<!--                                                 <i class="feather-list"></i> -->
+<!--                                                 <span>我的問答</span> -->
+<!--                                             </a> -->
+<!--                                         </li> -->
                                         <li>
                                             <a href="/order/order_history">
                                                 <i class="feather-clock"></i>
                                                 <span>歷史訂單</span>
                                             </a>
                                         </li>
-                                        <li>
-                                            <a href="/mj/student_gift_history">
-                                                <i class="feather-message-square"></i>
-                                                <span>收禮紀錄</span>
-                                            </a>
-                                        </li>
+<!--                                         <li> -->
+<!--                                             <a href="/mj/student_gift_history"> -->
+<!--                                                 <i class="feather-message-square"></i> -->
+<!--                                                 <span>收禮紀錄</span> -->
+<!--                                             </a> -->
+<!--                                         </li> -->
                                     </ul>
 
                                     <hr class="mt--10 mb--10">
+                                     <ul class="user-list-wrapper">
+                                        <li>
+                                            <a href="/user/user_register">
+                                                <i class="feather-log-out" name="register-btn"></i>
+                                                <span>註冊</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                    <ul class="user-list-wrapper">
+                                        <li>
+                                            <a href="/user/user_login">
+                                                <i class="feather-log-out" name="logout-in-btn"></i>
+                                                <span>登入</span>
+                                            </a>
+                                        </li>
+                                    </ul>
                                     <ul class="user-list-wrapper">
                                         <!--                                        <li>-->
                                         <!--                                            <a href="instructor-settings.html">-->
