--- a/src/main/resources/templates/front-end/socialpost/student_socialpost.html
+++ b/src/main/resources/templates/front-end/socialpost/student_socialpost.html
@@ -28,6 +28,10 @@ display:none;
 .tutor-bg-photo{
 z-index:0;
 }
+
+.rbt-avatars img{
+aspect-ratio:1;
+}
 </style>
 <body class="rbt-header-sticky">
 	<header th:replace="front-end/header.html"></header>
