--- a/src/main/resources/templates/back-end/backend_course_order.html
+++ b/src/main/resources/templates/back-end/backend_course_order.html
@@ -160,7 +160,7 @@
         <div class="col-lg-9">
             <!-- Start Enrole Course  -->
             <div class="rbt-dashboard-content bg-color-white rbt-shadow-box">
-                <div class="content">
+                <div class="">
                     <!--                    <div class="section-title">-->
                     <!--                        <h4 class="rbt-title-style-3">歷史訂單</h4>-->
                     <!--                    </div>-->
@@ -356,7 +356,7 @@
     document.addEventListener("DOMContentLoaded", function () {
         var table = document.getElementById('order_table');
         var dataTable = new DataTable(table, {
-            "lengthMenu": [10, 15, 20, 50, 100],
+            "lengthMenu": [5,10, 15, 20, 50, 100],
             "lengthChange": true,
             "searching": true,  //搜尋功能, 預設是開啟
             "paging": true,     //分頁功能, 預設是開啟
