--- a/src/main/resources/templates/front-end/cart/cartview.html
+++ b/src/main/resources/templates/front-end/cart/cartview.html
@@ -49,7 +49,7 @@
             <div class="rbt-minicart-bottom mt--20">
                 <div class="view-cart-btn">
                     <a class="rbt-btn btn-border icon-hover w-100 text-center" href="/cart/check">
-                        <span class="btn-text">查看購物車</span>
+                        <span class="btn-text">結帳去</span>
                         <span class="btn-icon"><i class="feather-arrow-right"></i></span>
                     </a>
                 </div>
