--- a/src/main/resources/templates/front-end/socialpost/student_socialpost.html
+++ b/src/main/resources/templates/front-end/socialpost/student_socialpost.html
@@ -378,12 +378,12 @@ aspect-ratio:1;
 	<script th:src="@{/js/social_post.js}"></script>
 	<script th:src="@{/js/mok/mok_opinion.js}"></script>
 	<script>
-	//最新消息
+// 	最新消息
 // 	$(document).ready(function() {
 // 	    var lastNewsCount = 0; 
 // 	    var isFirstRequest = true;
 // 	    var sessionUId = $(".sessionUId").text();
-// // 	    var lastNewsCount = localStorage.getItem(newsCountKey) ? parseInt(localStorage.getItem(newsCountKey), 10) : 0; 
+// 	    var lastNewsCount = localStorage.getItem(newsCountKey) ? parseInt(localStorage.getItem(newsCountKey), 10) : 0; 
 // // 	    console.log(sessionUId);
 	    
 // 	    checkNewsUpdate();
